--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.3.5"
-  }
+  },
+  "homepage": "https://manhtien1509.github.io/test"
 }
